# groupchat-market

./: CLAUDE.md  Cargo.toml  README.md  config.toml
bot/: CLAUDE.md  Cargo.toml  README.md
bot/src/: api_client.rs  claude.rs  db.rs  main.rs
contracts/: Cargo.toml  build.rs
contracts/contract1/: Cargo.toml  contract1.img  contract1.txt
contracts/contract1/src/: lib.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
