[workspace]
resolver = "2"
members = ["contracts", "contracts/contract1", "bot"]
exclude = ["init"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Hyle dependencies
sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "speedup_prover_catchup", package = "hyle-contract-sdk" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "speedup_prover_catchup", default-features = false, package = "hyle-client-sdk" }
hyle-modules = { git = "https://github.com/Hyle-org/hyle.git", branch = "speedup_prover_catchup", package = "hyle-modules" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", branch = "speedup_prover_catchup", default-features = false, package = "hyle-smt-token" }
hyle-hydentity = { git = "https://github.com/Hyle-org/hyle.git", branch = "speedup_prover_catchup", package = "hyle-hydentity" }

# Local contract dependencies
contracts = { path = "contracts", default-features = false, package = "contracts" }
contract1 = { path = "contracts/contract1", package = "contract1" }

# Common dependencies for bot and contracts
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Workspace-wide profile settings
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 0