[workspace]
resolver = "2"
members = ["contracts", "contracts/contract1", "bot", "server"]

[workspace.dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-contract-sdk", tag = "v0.13.0" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", default-features = false, package = "hyle-client-sdk", tag = "v0.13.0" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-smt-token", tag = "v0.13.0" }
hyle-modules = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-modules", tag = "v0.13.0" }
borsh = "1.5.7"

contracts = { path = "contracts", default-features = false, package = "contracts" }
contract1 = { path = "contracts/contract1", package = "contract1" }

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
