[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bot-specific dependencies
teloxide = { version = "0.17.0", features = ["macros"] }
pretty_env_logger = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json"] }

# Workspace shared dependencies
log = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

