[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bot-specific dependencies
teloxide = { version = "0.17.0", features = ["macros"] }
pretty_env_logger = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json"] }

# Workspace shared dependencies
borsh = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }


